# galaxy

./: .all-contributorsrc  .coveragerc  .dockerignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .hgflow  .hgignore  .hgtags  .isort.cfg  .k8s_ci.Dockerfile  .mailmap  .pre-commit-config.yaml.sample  .pullapprove.yml  .redocly.lint-ignore.yaml  .redocly.yaml  .travis.yml  =0.6.1  =1.10.0  =1.4.0  CITATION  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  CWL_TODO  Dockerfile  HISTORY.rst  INSTALL.md  LICENSE  LICENSE.txt  Logging.md  MANIFEST.in  MANIFEST.in.galaxy  MISSING.md  Makefile  (+138 more)
.ci/: autopep8.sh  check_controller.sh  check_mako.sh  check_py3_compatibility.sh  check_test_class_names.sh  eslint_wrapper.sh  first_startup.sh  flake8_blacklist.txt  flake8_docstrings_include_list.txt  flake8_ignorelist.txt  flake8_lint_include_list.txt  flake8_py3_wrapper.sh  flake8_wrapper.sh  flake8_wrapper_docstrings.sh  flake8_wrapper_imports.sh  ignore-spelling.txt  pep8_sources.txt  py3_sources.txt  run_selenium.sh  validate_test_tools.sh  yapf.sh
.circleci/: config.yml
.github/: dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml  release.yml
_tmp_ci/: flake8_blacklist.txt  flake8_docstrings_include_list.txt  validate_test_tools.sh
amp_metrics/: Makefile  system_metrics.c
client/: .babelrc  .docker-build.sh  .eslintignore  .eslintrc.js  .eslintrc.json  .npmrc  .prettierignore  .vitest-migrated.json  Dockerfile  GruntFile.js  README.md  README.txt  VITEST_TEST_POLISH.md  babel.config.js  babel.config.json  bower.json  build-config.shared.js  deploy.js  eslint.config.js  eslint.config.mjs  gulpfile.js  jest.config.js  karma.config.base.js  karma.config.js  karma.config.mocha.js  karma.config.qunit.js  navigation_to_schema.mjs  openapi_to_schema.mjs  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  styleguide.config.js  tsconfig.json  tsconfig.webpack.json  tsout.txt  tst.txt  visualizations.yml  vite-plugin-build-metadata.js  vite-plugin-galaxy-dev-server.js  (+10 more)
client-api/: .npmignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  tsconfig.node.json  tsup.config.ts  vitest.config.ts
config/: amp_requirements.txt  amp_tool_conf.xml  auth_conf.xml.sample  build_sites.yml.sample  celery.ini  container_resolvers.yml.sample  container_resolvers_conf.xml.sample  containers_conf.yml.sample  customauth_conf.xml.sample  data_manager_conf.xml.sample  datatypes_conf.xml  datatypes_conf.xml.sample  dependency_resolvers_conf.xml.sample  dev.ini  disposable_email_blacklist.conf.sample  disposable_email_blocklist.conf.sample  environment_modules_mapping.yml.sample  error_report.xml.sample  error_report.yml.sample  file_sources_conf.yml.sample  galaxy.ini.sample  galaxy.yml  galaxy.yml.interactivetools  galaxy.yml.k8s_interactivetools  galaxy.yml.realtime  galaxy.yml.sample  job_conf.sample.yml  job_conf.xml  job_conf.xml.interactivetools  job_conf.xml.realtime  job_conf.xml.sample_advanced  job_conf.xml.sample_basic  job_conf.yml.interactivetools  job_conf.yml.interactivetools.podman  job_conf.yml.k8s_interactivetools  job_conf_k8s.xml  job_metrics_conf.xml.sample  job_resource_params_conf.xml.sample  (+36 more)
drmaa/drmaa/: Makefile  Makefile.in  README  STATUS  WISDOM  auxDrmaa.c  auxDrmaa.h  config.h  config.h.in  config.status  configure  configure.in  documentation  drmaa.h  drmaa_common.c  drmaa_common.h  iniparser.c  iniparser.h  libDrmaa.c  my_popen.c
tools/racon/: .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  LICENSE  Makefile  README.md  cmake_install.cmake  macros.xml  output.csv  racon  racon.xml  results.nvprof  results.nvvp
tools/racon/ClaraGenomicsAnalysis/: CTestTestfile.cmake  Doxyfile.docs  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/common/io/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/common/logging/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/common/utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/common/utils/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/cudaaligner/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/cudaaligner/benchmarks/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/cudaaligner/samples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/cudaaligner/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/cudamapper/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/cudamapper/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cudamapper_file_location.hpp
tools/racon/ClaraGenomicsAnalysis/cudamapper/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/cudapoa/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/cudapoa/benchmarks/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/cudapoa/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake  file_location.hpp
tools/racon/ClaraGenomicsAnalysis/cudapoa/samples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/ClaraGenomicsAnalysis/cudapoa/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/racon/scripts/: racon_preprocess.py  racon_wrapper.py
tools/racon/src/: logger.cpp  logger.hpp  main.cpp  overlap.cpp  overlap.hpp  polisher.cpp  polisher.hpp  sequence.cpp  sequence.hpp  window.cpp  window.hpp
tools/racon/src/cuda/: cudaaligner.cpp  cudaaligner.hpp  cudabatch.cpp  cudabatch.hpp  cudapolisher.cpp  cudapolisher.hpp  cudautils.hpp
tools/racon/test/: racon_test.cpp  racon_test_config.h.in
tools/racon/test/data/: sample_overlaps.paf
(+20720 files in other folders)
