[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
^/(
  | packages
)/
'''

[tool.darker]
isort = true

[tool.poetry]
name = "galaxy"
version = "22.01.dev0"
description = "Galaxy is an open, web-based platform for accessible, reproducible, and transparent computational research."
authors = ["Galaxy Contributors"]
license = "AFL-3.0"
readme = "README.rst"
homepage = "https://galaxyproject.org/"
repository = "https://github.com/galaxyproject/galaxy/"
documentation = "https://docs.galaxyproject.org/"

[[tool.poetry.source]]
name = "galaxyproject"
url = "https://wheels.galaxyproject.org/simple"

[tool.poetry.dependencies]
a2wsgi = "*"
aiofiles = "*"
alembic = "*"
alembic_utils = "*"
apispec = "*"
Babel = "*"
bdbag = ">=1.6.3"
Beaker = "*"
bioblend = "*"
bleach = "*"
boltons = "*"
boto = "*"
bx-python = "*"
celery = "*"
Cheetah3 = "!=3.2.6.post2"  # yanked release, https://github.com/python-poetry/poetry/issues/2453
cloudauthz = "==0.6.0"
cloudbridge = "*"
circus = "*"
cwltool = "==3.1.20221109155812"
conda-package-streaming = "*"
dictobj = "*"
dnspython = "*"
docutils = "!=0.17, !=0.17.1"
edam-ontology = "*"
fastapi = ">=0.71.0, !=0.89.0"  # https://github.com/tiangolo/fastapi/issues/4041 https://github.com/tiangolo/fastapi/issues/5861
fastapi-utils = "*"
fs = "*"
future = "*"
galaxy_sequence_utils = "*"
gravity = ">=1.0"
gunicorn = "*"
gxformat2 = "*"
h5py = "*"
importlib-metadata = "<5"  # Work around https://github.com/celery/kombu/issues/1600
importlib-resources = "*"
isa-rwval = "*"
kombu = "*"
lagom = "*"
Mako = "*"
Markdown = "*"
MarkupSafe = "*"
Mercurial = "*"
mrcfile = "*"
nodeenv = "*"
numpy = "*"
packaging = "<22"  # packaging 22.0 dropped LegacyVersion
paramiko = "!=2.9.0, !=2.9.1"  # https://github.com/paramiko/paramiko/issues/1961
Parsley = "*"
Paste = "*"
pebble = "*"
psutil = "*"
pulsar-galaxy-lib = ">=0.15.0.dev0"
pycryptodome = "*"
pydantic = {version = "*", extras = ["email"]}
PyJWT = "*"
pykwalify = "*"
pylibmagic = "*"
pyparsing = "*"
pysam = ">=0.20"
python = ">=3.7,<3.12"  # Keep maximum version strict to appease numpy and scipy
python-dateutil = "*"
python-magic = "*"
python-multipart = "*"  # required to support form parsing in FastAPI/Starlette
PyYAML = "*"
refgenconf = ">=0.12.0"
requests = "*"
rocrate = "*"
Routes = "*"
schema-salad = "!=8.3.20220721194857"  # https://github.com/common-workflow-language/schema_salad/issues/575
social-auth-core = {version = "==4.0.3", extras = ["openidconnect"]}
sortedcontainers = "*"
SQLAlchemy = ">=1.4.25,<2"
sqlitedict = "*"
sqlparse = "*"
starlette = "*"
starlette-context = "*"
svgwrite = "*"
tifffile = "*"
tuswsgi = "*"
typing-extensions = "*"
uvicorn = "*"
uvloop = "*"
WebOb = "*"
Whoosh = "*"
zipstream-new = "*"
s3fs = "^2023.1.0"

[tool.poetry.group.dev.dependencies]
ase = ">=3.18.1"
black = "^22.1.0"
codespell = "*"
cwltest = "*"
darker = "*"
fluent-logger = "*"
httpx = "*"
isort = "^5.10.1"
lxml = "!=4.2.2"
markdown-it-reporter = "*"
myst-parser = "*"
pkce = "*"
PyGithub = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-celery = "*"
pytest-cov = "*"
pytest-html = "*"
python-irodsclient = "!=1.1.2"  # https://github.com/irods/python-irodsclient/issues/356
pytest-json-report = "*"
pytest-mock = "*"
pytest-postgresql = "!=3.0.0"  # https://github.com/ClearcodeHQ/pytest-postgresql/issues/426
pytest-shard = "*"
responses = "*"
selenium = "*"
seletools = "*"
Sphinx = ">=4.0"  # support docutils 0.17
sphinx_rtd_theme = ">=1.0.0"
statsd = "*"
testfixtures = "*"
tuspy = "*"
twill = "*"
watchdog = "*"

[tool.ruff]
select = ["E", "F", "B", "UP"]
target-version = "py37"
# Exceptions:
# B008 Do not perform function calls in argument defaults (for FastAPI Depends and Body)
# B9 flake8-bugbear opinionated warnings
# E402 module level import not at top of file # TODO, we would like to improve this.
# E501 is line length (delegated to black)
ignore = ["B008", "B9", "E402", "E501"]

[tool.ruff.isort]
# We are not selecting "I" rules in ruff yet because support for all the isort
# options we need is not complete, but these are the one currently implemented.
combine-as-imports = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.per-file-ignores]
# Don't check pyupgrade rules on tool scripts, which may use different Python versions
"test/functional/tools/*" = ["UP"]
"tools/*" = ["UP"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true  # https://github.com/charliermarsh/ruff/issues/1617
